add bookmark package

--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{listings}
+\usepackage{bookmark}
 \PassOptionsToPackage{hyphens}{url}\usepackage{hyperref}
 \usepackage{amsmath,amsfonts,amssymb}
 \usepackage{geometry}
