--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -160,6 +160,21 @@ By taking 3 and 4-grams vectorization, we are able to improve from 82\% to 86\% 
 	\item Parler grossièrement du temps de calcul
 	\item Parler de LSTM et RNN
 \end{itemize}
+It is difficult to extract meaningful information 
+from the tweets mainly due to their small size. They are really small pieces of text and users often write concisely and not always in proper english. This 
+leads our algorithm into troubles.
+To face this difficulty, we need to have enough data so the dataset needs to be big enough and that makes the computation 
+time really big.
+
+The Neural Networks are very powerful tools but the computational power required to train them 
+is enormous. This makes them painful to use with our big dataset. 
+
+Given our results, it seems that the Logistic Regression and the Support Vector Machine give their best here. We think that we go to the limits of these 
+techniques and that we could not have done better with them. 
+
+We find other techniques that could have been promissing like the Recurrent Neural Networks and more precisely the Long-Short Term Memory. These technics 
+are very well suited to the text analysis due to their capabilities to "remember" the beginning of the sentence while going through it. As the human 
+language is based on aligning words together to make sense, it seems to be a good idea. We do not have time to cover them here.
 
 \clearpage
 \onecolumn
