--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -191,7 +191,8 @@ language is based on aligning words together to make sense, it seems to be a goo
 		DEVLIN, Jacob, CHANG, Ming-Wei, LEE, Kenton, et al. Bert: Pre-training of deep bidirectional transformers for language understanding. arXiv preprint arXiv:1810.04805, 2018.
 	\bibitem{bertcode}
 		BERT Text Classification in 3 Lines of Code Using Keras
-		\\\url{https://towardsdatascience.com/bert-text-classification-in-3-lines-of-code-using-keras-264db7e7a358}
+		\\\url{https://towardsdatascience.com/bert-text-classification-in-3-lines-of-code-using-}
+		\\url{-keras-264db7e7a358}
 	\bibitem{ktrain}
 		Ktrain library
 		\\\url{https://github.com/amaiya/ktrain}
