add paragraph about bert

--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -184,6 +184,9 @@ is enormous. This makes them painful to use with our big dataset specially on Go
 Given our results, it seems that the Logistic Regression and the Support Vector Machine give their best here. We think that we go to the limits of these 
 techniques and that we could not have done better. 
 
+The new technics like BERT are very performant but requires lots of time and memory. They give better results than old techniques cited above but the latter give relatively close 
+performance in a smaller amount of time and with less resources. Their computation over accuracy is way better.
+
 We are aware of other techniques that are promissing like the Recurrent Neural Networks and more precisely the Long-Short Term Memory. These technics 
 are very well suited to the text analysis due to their capabilities to "remember" previous words (vectors) as as computing on a given one. As the human 
 language is based on aligning words together to make sense, it seems natural to process sentence as a whole and not words independently. 
