--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -185,7 +185,7 @@ Given our results, it seems that the Logistic Regression and the Support Vector 
 techniques and that we could not have done better. 
 
 The new technics like BERT are very performant but requires lots of time and memory. They give better results than old techniques cited above but the latter give relatively close 
-performance in a smaller amount of time and with less resources. Their computation over accuracy is way better.
+performance in a smaller amount of time and with less resources. Their computation over accuracy ratio is way better. So they are not become obsolete in our opinion.
 
 We are aware of other techniques that are promissing like the Recurrent Neural Networks and more precisely the Long-Short Term Memory. These technics 
 are very well suited to the text analysis due to their capabilities to "remember" previous words (vectors) as as computing on a given one. As the human 
