--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -107,7 +107,7 @@ We use ktrain library\cite{ktrain} and inspire ourself from its tutorial on text
 We then try to increase the maximal number of tokens to 400, as it is in reality in our dataset, it decreases our score on AICrowd of $0.01\&$. We also try with 3 epochs, a maximal number of tokens of 128 and a batch size of 32 (to make it scalable) but our result in AICrowd then decreases of $1.0\%$.
 
 \section{Logistic Regression and Support-Vector Machine}
-In this section we take a different approach compared to the one of neural nets. First, we present the preprocessing steps we applied to clean, normalize and transforme the provided tweets datasets. Then, we compare them by training two models using support-vector machine and logistic regression classifiers. Finally, we optimize the most accurate models.
+In this section we take a different approach compared to the one of neural nets. First, we present the preprocessing steps we applied to clean, normalize and transform the provided tweets datasets. Then, we compare them by training two models using support-vector machine and logistic regression classifiers. Finally, we optimize the most accurate models.
 
 We used the following libraries and their dependencies.
 \begin{itemize}
@@ -128,7 +128,7 @@ We applied three kinds of preprocessing steps.
 \end{itemize}
 
 \subsubsection{Tweet Cleaning}
-This is a basic operation. We get rid of \texttt{<User>}, \texttt{<url>} and \verb"\n" because these have already been processed and should not contain that much information. Notice that nice users bad users are all described by the same word. The same argument can be applied to URLs. We also use regular expression to remove all kinds of punctuation. Even if punctation is usually expressive, it may be inconsistent considering the variety of tweets.
+This is a basic operation. We get rid of \texttt{<User>}, \texttt{<url>} and \verb"\n" because these have already been processed and should not contain that much information. Notice that nice users and bad users are all described by the same word. The same argument can be applied to URLs. We also use regular expression to remove all kinds of punctuation. Even if punctation is usually expressive, it may be inconsistent considering the variety of tweets.
 
 \subsubsection{Duplicates}
 We simply remove all the duplicates tweets in the cleaned datasets. The problem with duplicates is that they can artificially increase the accuracy if the sames tweets appear in the training as well as in the test dataset. Nevertheless, removing duplicates do not necessarly make sense as multiple user could have written the same tweet. We would neglect its importance.
