--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -189,7 +189,7 @@ performance in a smaller amount of time and with less resources. Their computati
 
 We are aware of other techniques that are promissing like the Recurrent Neural Networks and more precisely the Long-Short Term Memory. These technics 
 are very well suited to the text analysis due to their capabilities to "remember" previous words (vectors) as as computing on a given one. As the human 
-language is based on aligning words together to make sense, it seems natural to process sentence as a whole and not words independently. 
+language is based on aligning words together to make sense, it seems natural to process words considering the ones around and not independently. 
 We do not have time to cover them here.
 
 \clearpage
