--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -171,7 +171,7 @@ Finally, we optimize the SVM model on cleaned data.
 By taking 3 and 4-grams vectorization, we are able to improve from 82\% to 86\% even if 4-grams seems to be the limit before sever overfitting. Nevertheless, this score is confirmed on aicrowd. On the other hand, \textit{TF-IDF} performs similarly to 1-grams as tweets are short and words tend to appear only once in them.
 
 \section{Final Discussion}
-Extracting meaningful informations from tweets is a challenging tasks. They are small pieces of text and users often write concisely and not always in proper English. There are lots of different spellings and variations for a same word and our algorithms struggle to interpret them as one.
+Extracting meaningful informations from tweets is a challenging task. They are small pieces of text and users often write concisely and not always in proper English. There are lots of different spellings and variations for a same word and our algorithms struggle to interpret them as one.
 To face this difficulty, the dataset could be larger and larger but this would also increase the computational requirements.
 
 The neural networks are powerful tools but the computational power required to train them 
