--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -184,7 +184,9 @@ The new techniques like BERT perform better but require lots of time and memory.
 performance in a smaller amount of time and with less resources. Their computation over accuracy ratio is way better. So they do not become obsolete in our opinion.
 
 In future works, we would like to asses other techniques that look promising like the recurrent neural networks and more precisely the long-short term memory as we still have margin for improvement. These techniques seem to be well suited for text analysis due to their capabilities to remember previous words while they are processing others. As human 
-language is based on aligning words together to make sense, it seems natural to process words considering the ones around as well as their structure. In the end, teaching a machine to learn from noisy and inconsistent data such as tweets to predict the sentiment expressed by their content is not an easy task.
+language is based on aligning words together to make sense, it seems natural to process words considering the ones around as well as their structure. 
+
+In the end, teaching a machine to learn from noisy and inconsistent data such as tweets to predict the sentiment expressed by their content is not an easy task.
 
 \clearpage
 \onecolumn
