change preprocessing example

--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -38,7 +38,7 @@ In this project, we implement tweets classifiers using neural nets, BERT, logist
 \section{Neural Networks}
 
 \subsection{Preprocessing}
-To clean our data, we follow an algorithm similar to Kim Yoon's paper\cite{kimyoonpaper} and code\cite{kimyooncode}. We remove duplicates on the training set and separate known contractions: for example, "can'nt" becomes "can 'nt".
+To clean our data, we follow an algorithm similar to Kim Yoon's paper\cite{kimyoonpaper} and code\cite{kimyooncode}. We remove duplicates on the training set and separate known contractions: for example, "don't" becomes "do n't".
 
 \subsection{Embedding and Neural Nets}
 First, each tweet is transformed into a vector. We implement
