--- a/project02/report/proj2_report.tex
+++ b/project02/report/proj2_report.tex
@@ -33,7 +33,72 @@
 \clearpage
 
 \section{Introduction}
-In this project, we implement tweets classifiers using neural nets, BERT, logistic regression and support-vector machine to predict if their content is positive or negative.
+In this project, we implement tweets classifiers using logistic regression, support-vector machine, neural nets and BERT to predict if their content is positive or negative.
+
+\section{Logistic Regression and Support-Vector Machine}
+In this section we take a different approach compared to the one of neural nets. First, we present the preprocessing steps we applied to clean, normalize and transform the provided tweets datasets. Then, we compare them by training two models using support-vector machine and logistic regression classifiers. Finally, we optimize the most accurate models.
+
+We used the following libraries and their dependencies.
+\begin{itemize}
+	\setlength\itemsep{1px}
+	\item Python 3.8
+	\item Jupyter-Notebook
+	\item Natural Language Toolkit
+	\item Scikit-learn
+\end{itemize}
+
+\subsection{Preprocessing}
+We applied three kinds of preprocessing steps.
+\begin{itemize}
+	\setlength\itemsep{1px}
+	\item Removing or replacing words and symbols.
+	\item Normalizing by modifying words or sentences.
+	\item Transforming the tweets into usable data structures for machine learning.
+\end{itemize}
+
+\subsubsection{Tweet Cleaning}
+This is a basic operation. We get rid of \texttt{<User>}, \texttt{<url>} and \verb"\n" because these have already been processed and should not contain that much information. Notice that nice users and bad users are all described by the same word. The same argument can be applied to URLs. We also use regular expression to remove all kinds of punctuation. Even if punctation is usually expressive, it may be inconsistent considering the variety of tweets.
+
+\subsubsection{Duplicates}
+We simply remove all the duplicates tweets in the cleaned datasets. The problem with duplicates is that they can artificially increase the accuracy if the sames tweets appear in the training as well as in the test dataset. Nevertheless, removing duplicates do not necessarly make sense as multiple user could have written the same tweet. We would neglect its importance.
+
+\subsubsection{Stemming}
+Stemming is a technique that removes affixes so that similar words are effectively understood as similar when interpreted by the machine learning algorithm. Here are some examples : \textit{cars - car, swimming - swimm, this - thi}. This is often described as brute force as it is not smart but crude. For example, it does not see the difference between a word in its plural form from a word whose last letter is an \textit{s}.
+
+\subsubsection{Lemmatization}
+This technique is the smart version of stemming. It does a more advanced analysis of word to clearly identify the structure of each word and to cut it correctly.
+
+\subsubsection{Stop Words}
+Stop words are the most common words like \textit{I, it, is, of, in, \dots}. They should be equivalently be present in both positive and negative datasets but they do not have real impact in the meaning of the sentence. We went trough all the datasets to establish a list of the most used words, kept the ten most used and removed them in all the tweets of the training sets.
+
+\subsubsection{Vectorization}
+We use Scikit-learn to vectorize our data. We used multiple binary vectorization with \textit{n-grams} where \textit{n} corresponds to the number of words vectorized together. This helps considering the context in which words are used by increasing \textit{n}.
+
+\subsubsection{Term Frequency-Inverse Document Frequency}
+Instead of using \textit{0s} and \textit{1s} like binary vectorization, with \textit{TF-IDF} we count the occurences of the words.
+
+\subsection{1-grams Logistic Regression and Support-Vector Machine}
+First, we select the most effective cleaning or normalizing method by assessing them with logistic regression and SVM on a 1-grams vectorization. We use 75\% of the provided datasets for the training and the 25\% remaining for testing.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.5\textwidth]{../plots/logreg.png}
+\end{figure}
+
+\begin{figure}[h]
+	\includegraphics[width=0.5\textwidth]{../plots/svm.png}
+\end{figure}
+
+Overall, SVM performs better than logistic regression. Simple cleaning seems to be enough. Since tweets are short sentences, it is hard to normalize tweets without alterating them too much.
+
+\subsection{Optimization of SVM}
+Finally, we optimize the SVM model on cleaned data.
+
+\begin{figure}[h]
+	\includegraphics[width=0.5\textwidth]{../plots/improved_svm.png}
+\end{figure}
+
+By taking 3 and 4-grams vectorization, we are able to improve from 82\% to 86\% even if 4-grams seems to be the limit before sever overfitting. Nevertheless, this score is confirmed on aicrowd. On the other hand, \textit{TF-IDF} performs similarly to 1-grams as tweets are short and words tend to appear only once in them.
 
 \section{Neural Networks}
 
@@ -109,71 +174,6 @@ BERT (Bidirectional Encoder Representations from Transformers)\cite{bertpaper} i
 We use ktrain library\cite{ktrain} and inspire ourself from its tutorial on text classification to use BERT on our datasets. We remove duplicates from our training set and then split it in $75\%$ for training and $25\%$ for validating. To reduce the ressources consumption, we fix the batch size to 10 and the maximal number of tokens to consider to 199, as explained in \ref{199}. Based on the original paper, we use a learning rate of $2*10^{-5}$. We limit it to one epoch with the fit\_onecycle method because it is time consumming. This technique corresponds to our best submission on aicrowd with an accuracy of $87.6\%$ and an F-1 score of $87.9\%$.
 
 Then, we  increase the maximal number of tokens to 400, as it is in reality in our dataset which decreases our score. Using 3 epochs, a maximal number of tokens of 128 and a batch size of 32 also reduced our accuracy on aicrowd.
-
-\section{Logistic Regression and Support-Vector Machine}
-In this section we take a different approach compared to the one of neural nets. First, we present the preprocessing steps we applied to clean, normalize and transform the provided tweets datasets. Then, we compare them by training two models using support-vector machine and logistic regression classifiers. Finally, we optimize the most accurate models.
-
-We used the following libraries and their dependencies.
-\begin{itemize}
-	\setlength\itemsep{1px}
-	\item Python 3.8
-	\item Jupyter-Notebook
-	\item Natural Language Toolkit
-	\item Scikit-learn
-\end{itemize}
-
-\subsection{Preprocessing}
-We applied three kinds of preprocessing steps.
-\begin{itemize}
-	\setlength\itemsep{1px}
-	\item Removing or replacing words and symbols.
-	\item Normalizing by modifying words or sentences.
-	\item Transforming the tweets into usable data structures for machine learning.
-\end{itemize}
-
-\subsubsection{Tweet Cleaning}
-This is a basic operation. We get rid of \texttt{<User>}, \texttt{<url>} and \verb"\n" because these have already been processed and should not contain that much information. Notice that nice users and bad users are all described by the same word. The same argument can be applied to URLs. We also use regular expression to remove all kinds of punctuation. Even if punctation is usually expressive, it may be inconsistent considering the variety of tweets.
-
-\subsubsection{Duplicates}
-We simply remove all the duplicates tweets in the cleaned datasets. The problem with duplicates is that they can artificially increase the accuracy if the sames tweets appear in the training as well as in the test dataset. Nevertheless, removing duplicates do not necessarly make sense as multiple user could have written the same tweet. We would neglect its importance.
-
-\subsubsection{Stemming}
-Stemming is a technique that removes affixes so that similar words are effectively understood as similar when interpreted by the machine learning algorithm. Here are some examples : \textit{cars - car, swimming - swimm, this - thi}. This is often described as brute force as it is not smart but crude. For example, it does not see the difference between a word in its plural form from a word whose last letter is an \textit{s}.
-
-\subsubsection{Lemmatization}
-This technique is the smart version of stemming. It does a more advanced analysis of word to clearly identify the structure of each word and to cut it correctly.
-
-\subsubsection{Stop Words}
-Stop words are the most common words like \textit{I, it, is, of, in, \dots}. They should be equivalently be present in both positive and negative datasets but they do not have real impact in the meaning of the sentence. We went trough all the datasets to establish a list of the most used words, kept the ten most used and removed them in all the tweets of the training sets.
-
-\subsubsection{Vectorization}
-We use Scikit-learn to vectorize our data. We used multiple binary vectorization with \textit{n-grams} where \textit{n} corresponds to the number of words vectorized together. This helps considering the context in which words are used by increasing \textit{n}.
-
-\subsubsection{Term Frequency-Inverse Document Frequency}
-Instead of using \textit{0s} and \textit{1s} like binary vectorization, with \textit{TF-IDF} we count the occurences of the words.
-
-\subsection{1-grams Logistic Regression and Support-Vector Machine}
-First, we select the most effective cleaning or normalizing method by assessing them with logistic regression and SVM on a 1-grams vectorization. We use 75\% of the provided datasets for the training and the 25\% remaining for testing.
-
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=0.5\textwidth]{../plots/logreg.png}
-\end{figure}
-
-\begin{figure}[h]
-	\includegraphics[width=0.5\textwidth]{../plots/svm.png}
-\end{figure}
-
-Overall, SVM performs better than logistic regression. Simple cleaning seems to be enough. Since tweets are short sentences, it is hard to normalize tweets without alterating them too much.
-
-\subsection{Optimization of SVM}
-Finally, we optimize the SVM model on cleaned data.
-
-\begin{figure}[h]
-	\includegraphics[width=0.5\textwidth]{../plots/improved_svm.png}
-\end{figure}
-
-By taking 3 and 4-grams vectorization, we are able to improve from 82\% to 86\% even if 4-grams seems to be the limit before sever overfitting. Nevertheless, this score is confirmed on aicrowd. On the other hand, \textit{TF-IDF} performs similarly to 1-grams as tweets are short and words tend to appear only once in them.
 
 \section{Final Discussion}
 Extracting meaningful informations from tweets is a challenging task. They are small pieces of text and users often write concisely and not always in proper English. There are lots of different spellings and variations for a same word and our algorithms struggle to interpret them as one.
